Fix spacing between annotation area buttons

--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -134,7 +134,7 @@
 
 #annotation-area-buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0.4em 4.2em;
 
   box-shadow: 0px -2px 10px -2px rgba(0, 0, 0, 0.05);
